--- a/index.html
+++ b/index.html
@@ -7,51 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
       body {
-        font-family: 'Poppins', sans-serif;
-        transition: background-color 0.3s, color 0.3s;
-      }
-
-      body.dark {
-        background-color: #111827;
-        color: #e5e5e5;
-      }
-
-      body.light {
-        background-color: #ffffff;
-        color: #111827;
-      }
-
-      nav.sticky-nav a {
-        transition: color 0.3s;
-      }
-
-      nav.sticky-nav a:hover {
+        font-family: 'Inter', sans-serif;
+        background-color: #0a192f;
         color: #ffffff;
-      }
-
-      header {
-        background-color: #1f2937;
-      }
-
-      #hamburger {
-        color: white;
-      }
-
-      .logo-grid img {
-        height: 60px;
-        object-fit: contain;
-        margin: 0.5rem;
-      }
-
-      .logo-grid {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
       }
 
       .left-label-section h2 {
@@ -86,121 +48,101 @@
       }
     </style>
   </head>
-  <body class="dark font-sans">
-    <!-- HEADER -->
-    <header class="hero py-6 px-8 shadow-md">
-      <div class="max-w-7xl mx-auto flex justify-between items-center">
-        <div>
-          <h1 class="text-4xl font-bold text-white">Sachin Gupta</h1>
-          <p class="text-lg mt-1 text-white">Building financial products for B2B and B2C</p>
-        </div>
-        <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover"/>
-        </div>
-      </div>
-    </header>
+  <body class="font-sans">
+    <!-- SIDE NAVIGATION -->
+    <div class="flex">
+      <aside class="w-64 min-h-screen bg-[#0a192f] text-white fixed top-0 left-0 px-8 py-12">
+        <h1 class="text-4xl font-bold mb-6">Sachin Gupta</h1>
+        <nav class="space-y-6 text-lg">
+          <a href="#about" class="block hover:text-blue-400">About</a>
+          <a href="#projects" class="block hover:text-blue-400">Projects</a>
+          <a href="#affiliations" class="block hover:text-blue-400">Affiliations</a>
+          <a href="#contact" class="block hover:text-blue-400">Contact</a>
+          <a href="#resume" class="block hover:text-blue-400">Resume</a>
+        </nav>
+      </aside>
 
-    <!-- NAVIGATION -->
-    <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
-      <div class="max-w-4xl mx-auto flex justify-between items-center relative">
-        <div class="lg:hidden">
-          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
-        </div>
-        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-gray-900 to-gray-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
-          <a href="#about">About</a>
-          <a href="#projects">Projects</a>
-          <a href="#affiliations">Affiliations</a>
-          <a href="#contact">Contact</a>
-          <a href="#resume">Resume</a>
-        </div>
-        <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
-          <span id="theme-icon" class="material-icons">dark_mode</span>
-          <span class="ml-2">Toggle Theme</span>
-        </button>
-      </div>
-    </nav>
+      <main class="ml-64 max-w-5xl px-8 py-12 space-y-20">
+        <section id="about" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">About</h2>
+          <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
+        </section>
 
-    <!-- MAIN -->
-    <main class="max-w-5xl mx-auto px-6 py-12 space-y-20">
-      <section id="about" data-aos="fade-up" class="left-label-section">
-        <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
-      </section>
+        <section id="projects" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl sm:text-4xl font-bold text-blue-400 mb-12">Projects</h2>
+          <div class="space-y-16">
+            <div>
+              <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+              <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+              <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Managing Government Business</h3>
+              <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+              <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+            </div>
+          </div>
+        </section>
 
-      <section id="projects" data-aos="fade-up" class="left-label-section">
-        <h2 class="text-3xl sm:text-4xl font-bold text-blue-400 mb-12">Projects</h2>
-        <div class="space-y-16">
-          <!-- Projects here -->
-          <!-- [unchanged content omitted for brevity] -->
-        </div>
-      </section>
+        <section id="affiliations" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+          <div class="logo-grid mb-10">
+            <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+            <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+            <img src="logo-zomato.png" alt="Zomato" />
+            <img src="logo-indicold.png" alt="Indicold" />
+            <img src="logo-unacademy.png" alt="Unacademy" />
+            <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+            <img src="logo-big-league.png" alt="The Big League" />
+          </div>
 
-      <section id="affiliations" data-aos="fade-up" class="left-label-section">
-        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-        <div class="logo-grid mb-10">
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
-          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-          <img src="logo-zomato.png" alt="Zomato" />
-          <img src="logo-indicold.png" alt="Indicold" />
-          <img src="logo-unacademy.png" alt="Unacademy" />
-          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.png" alt="The Big League" />
-        </div>
+          <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
+          <div class="logo-grid">
+            <img src="irma.png" alt="IRMA" />
+            <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+            <img src="logo-university-illinois.png" alt="University of Illinois" />
+          </div>
+        </section>
 
-        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
-        <div class="logo-grid">
-          <img src="irma.png" alt="IRMA" />
-          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
-          <img src="logo-university-illinois.png" alt="University of Illinois" />
-        </div>
-      </section>
+        <section id="contact" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">Contact</h2>
+          <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
+        </section>
 
-      <section id="contact" data-aos="fade-up" class="left-label-section">
-        <h2 class="text-3xl font-bold mb-4">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
-      </section>
+        <section id="resume" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">Resume</h2>
+          <a href="Sachin Gupta_ Product.pdf" download class="underline">Download Resume</a>
+        </section>
 
-      <section id="resume" data-aos="fade-up" class="left-label-section">
-        <h2 class="text-3xl font-bold mb-4">Resume</h2>
-        <a href="Sachin Gupta_ Product.pdf" download class="underline">Download Resume</a>
-      </section>
-    </main>
+        <!-- FOOTER -->
+        <footer class="bg-black text-white py-6 text-center">
+          &copy; 2025 Sachin Gupta. All rights reserved.
+          <div class="footer-links">
+            <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank">
+              <img src="linkedin-icon.png" alt="LinkedIn" class="w-6 h-6 inline" />
+            </a>
+            <a href="Sachin Gupta_ Product.pdf" download class="underline">Click here to download Resume</a>
+          </div>
+        </footer>
+      </main>
+    </div>
 
-    <!-- FOOTER -->
-    <footer class="bg-black text-white py-6 text-center">
-      &copy; 2025 Sachin Gupta. All rights reserved.
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank">
-          <img src="linkedin-icon.png" alt="LinkedIn" class="w-6 h-6 inline" />
-        </a>
-        <a href="Sachin Gupta_ Product.pdf" download class="underline">Click here to download Resume</a>
-      </div>
-    </footer>
-
-    <!-- JS for Theme & Menu -->
     <script>
       AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
-
-      const themeToggleButton = document.getElementById("theme-toggle");
-      const currentTheme = localStorage.getItem("theme") || "dark";
-      document.body.classList.add(currentTheme);
-
-      themeToggleButton.addEventListener("click", () => {
-        if (document.body.classList.contains("dark")) {
-          document.body.classList.replace("dark", "light");
-          localStorage.setItem("theme", "light");
-        } else {
-          document.body.classList.replace("light", "dark");
-          localStorage.setItem("theme", "dark");
-        }
-      });
-
-      const hamburgerButton = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      hamburgerButton.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-      });
     </script>
   </body>
 </html>
