--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         font-family: 'Inter', sans-serif;
         background-color: #0a192f;
         color: #ffffff;
-        scroll-behavior: smooth;
       }
 
       .left-label-section h2 {
@@ -32,46 +31,6 @@
         margin-right: 1rem;
       }
 
-      /* Left Navigation Styling */
-      aside {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        height: 100vh;
-        padding: 20px;
-        background-color: #0a192f;
-        color: #ffffff;
-        box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
-      }
-
-      aside h1 {
-        font-size: 2.5rem;
-        margin-bottom: 40px;
-      }
-
-      aside nav a {
-        display: block;
-        padding: 10px 0;
-        font-size: 1.125rem;
-        color: #ffffff;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        transition: color 0.3s ease, transform 0.3s ease;
-      }
-
-      aside nav a:hover {
-        color: #60a5fa;
-        transform: translateX(10px);
-      }
-
-      main {
-        margin-left: 250px;
-        padding: 40px;
-        max-width: 1100px;
-        margin: auto;
-      }
-
       .footer-links {
         display: flex;
         justify-content: center;
@@ -87,141 +46,88 @@
       .footer-links a:hover {
         transform: scale(1.1);
       }
-
-      section {
-        margin-bottom: 60px;
-      }
-
-      .section-title {
-        font-size: 2rem;
-        font-weight: 700;
-        color: #ffffff;
-        margin-bottom: 20px;
-      }
-
-      .section-number {
-        font-size: 1.125rem;
-        font-weight: 400;
-        margin-right: 10px;
-        color: #60a5fa;
-      }
-
-      /* Hover effects for nav links */
-      .nav-link {
-        position: relative;
-        display: inline-block;
-      }
-
-      .nav-link::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background-color: #60a5fa;
-        bottom: -5px;
-        left: 0;
-        transform: scaleX(0);
-        transform-origin: bottom right;
-        transition: transform 0.25s ease-out;
-      }
-
-      .nav-link:hover::after {
-        transform: scaleX(1);
-        transform-origin: bottom left;
-      }
     </style>
   </head>
   <body class="font-sans">
     <!-- SIDE NAVIGATION -->
-    <aside>
-      <h1 class="text-4xl font-bold mb-6">Sachin Gupta</h1>
-      <nav class="space-y-6 text-lg">
-        <a href="#about" class="nav-link">01. About</a>
-        <a href="#projects" class="nav-link">02. Projects</a>
-        <a href="#affiliations" class="nav-link">03. Affiliations</a>
-        <a href="#contact" class="nav-link">04. Contact</a>
-        <a href="#resume" class="nav-link">05. Resume</a>
-      </nav>
-    </aside>
+    <div class="flex">
+      <aside class="w-64 min-h-screen bg-[#0a192f] text-white fixed top-0 left-0 px-8 py-12">
+        <h1 class="text-4xl font-bold mb-6">Sachin Gupta</h1>
+        <nav class="space-y-6 text-lg">
+          <a href="#about" class="block hover:text-blue-400">About</a>
+          <a href="#projects" class="block hover:text-blue-400">Projects</a>
+          <a href="#affiliations" class="block hover:text-blue-400">Affiliations</a>
+          <a href="#contact" class="block hover:text-blue-400">Contact</a>
+          <a href="#resume" class="block hover:text-blue-400">Resume</a>
+        </nav>
+      </aside>
 
-    <!-- MAIN CONTENT -->
-    <main>
-      <section id="about" class="left-label-section" data-aos="fade-up">
-        <h2 class="section-title">About</h2>
-        <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
-      </section>
+      <main class="ml-64 max-w-5xl px-8 py-12 space-y-20">
+        <section id="about" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">About</h2>
+          <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
+        </section>
 
-      <section id="projects" class="left-label-section" data-aos="fade-up">
-        <h2 class="section-title">Projects</h2>
-        <div class="space-y-16">
-          <div>
-            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+        <section id="projects" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl sm:text-4xl font-bold text-blue-400 mb-12">Projects</h2>
+          <div class="space-y-16">
+            <div>
+              <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+              <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+              <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Managing Government Business</h3>
+              <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+            </div>
+            <div>
+              <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+              <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+            </div>
           </div>
-          <div>
-            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+        </section>
+
+        <section id="affiliations" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+          <p>No logos here, just affiliations for now.</p>
+
+          <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
+          <p>No logos here either, just academic details.</p>
+        </section>
+
+        <section id="contact" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">Contact</h2>
+          <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
+        </section>
+
+        <section id="resume" data-aos="fade-up" class="left-label-section">
+          <h2 class="text-3xl font-bold mb-4">Resume</h2>
+          <a href="Sachin Gupta_ Product.pdf" download class="underline">Download Resume</a>
+        </section>
+
+        <!-- FOOTER -->
+        <footer class="bg-black text-white py-6 text-center">
+          &copy; 2025 Sachin Gupta. All rights reserved.
+          <div class="footer-links">
+            <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank">
+              <img src="linkedin-icon.png" alt="LinkedIn" class="w-6 h-6 inline" />
+            </a>
+            <a href="Sachin Gupta_ Product.pdf" download class="underline">Click here to download Resume</a>
           </div>
-          <div>
-            <h3 class="text-xl font-bold">Managing Government Business</h3>
-            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-          </div>
-          <div>
-            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
-            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
-          </div>
-        </div>
-      </section>
-
-      <section id="affiliations" class="left-label-section" data-aos="fade-up">
-        <h2 class="section-title">Industry Affiliations</h2>
-        <div class="logo-grid mb-10">
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
-          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-          <img src="logo-zomato.png" alt="Zomato" />
-          <img src="logo-indicold.png" alt="Indicold" />
-          <img src="logo-unacademy.png" alt="Unacademy" />
-          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.png" alt="The Big League" />
-        </div>
-
-        <h2 class="section-title">Academic Affiliations</h2>
-        <div class="logo-grid">
-          <img src="irma.png" alt="IRMA" />
-          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
-          <img src="logo-university-illinois.png" alt="University of Illinois" />
-        </div>
-      </section>
-
-      <section id="contact" class="left-label-section" data-aos="fade-up">
-        <h2 class="section-title">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
-      </section>
-
-      <section id="resume" class="left-label-section" data-aos="fade-up">
-        <h2 class="section-title">Resume</h2>
-        <a href="Sachin Gupta_ Product.pdf" download class="underline">Download Resume</a>
-      </section>
-
-      <!-- FOOTER -->
-      <footer class="bg-black text-white py-6 text-center">
-        &copy; 2025 Sachin Gupta. All rights reserved.
-        <div class="footer-links">
-          <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank">
-            <img src="linkedin-icon.png" alt="LinkedIn" class="w-6 h-6 inline" />
-          </a>
-          <a href="Sachin Gupta_ Product.pdf" download class="underline">Click here to download Resume</a>
-        </div>
-      </footer>
-    </main>
+        </footer>
+      </main>
+    </div>
 
     <script>
       AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
